--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <color name="colorPrimary">#ffc401</color>
+    <color name="colorPrimaryDark">#cb9c00</color>
+    <color name="textColorPrimary">#ffffff</color>
+    <color name="windowBackground">#d6d6d6</color>
+    <color name="navigationBarColor">#000000</color>
+    <color name="colorAccent">#BBd6d6d6</color>
+    <color name="textColorSecondary">#757575</color>
 
     <color name="selected_menu">#d6d6d6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="maroon">#d72d2d</color>
     <color name="light_grey">#d6d6d6</color>
-    <color name="textColorPrimary">#212121</color>
-    <color name="textColorSecondary">#757575</color>
+    <color name="result_bg">#434A54</color>
+    <color name="zoom_color">#40FF00</color>
+    
+    <color name="text_color">#4d2599</color>
 </resources>
