--- a/app/src/main/res/drawable-hdpi/button_camera_click.xml
+++ b/app/src/main/res/drawable-hdpi/button_camera_click.xml
@@ -5,9 +5,9 @@
         <shape android:shape="oval" >
             <stroke
                 android:width="3dp"
-                android:color="#6E0505" />
+                android:color="@color/colorPrimaryDark" />
 
-            <solid android:color="#6E0505" />
+            <solid android:color="@color/colorPrimaryDark" />
 
             <corners android:radius="15dp" />
 
@@ -22,7 +22,7 @@
         <shape android:shape="oval" >
             <solid android:color="@android:color/transparent" />
 
-             <padding
+            <padding
                 android:bottom="11dp"
                 android:left="11dp"
                 android:right="11dp"
@@ -32,7 +32,7 @@
     <item>
         <shape android:shape="oval" >
             <corners android:radius="15dp"/>
-            <solid android:color="#E26E83" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
     <item>
