--- a/app/src/main/res/drawable/bg_circle_white.xml
+++ b/app/src/main/res/drawable/bg_circle_white.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@android:color/holo_green_light" />
+        android:color="@color/white" />
 
     <size
         android:width="120dp"
