--- a/app/src/main/res/drawable/buttons_bg.xml
+++ b/app/src/main/res/drawable/buttons_bg.xml
@@ -4,7 +4,7 @@
         <shape
             android:shape="rectangle">
 
-            <gradient android:startColor="@color/light_grey" android:endColor="@color/white"
+            <gradient android:startColor="@color/colorPrimary" android:endColor="@color/white"
                 android:angle="90"/>
 
             <stroke android:width="1dp"
@@ -55,7 +55,7 @@
         <shape
             android:shape="rectangle">
 
-            <gradient android:startColor="@color/light_grey" android:endColor="@color/white"
+            <gradient android:startColor="@color/colorPrimary" android:endColor="@color/white"
                 android:angle="90"/>
 
 
