--- a/app/src/main/res/layout/fragment_new_truck.xml
+++ b/app/src/main/res/layout/fragment_new_truck.xml
@@ -160,7 +160,7 @@
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
 
-               android:id="@+id/add_new_truck"
+               android:id="@+id/find_truck"
                />
        </LinearLayout>
 
