--- a/app/src/main/res/layout/fragment_new_truck_1.xml
+++ b/app/src/main/res/layout/fragment_new_truck_1.xml
@@ -8,21 +8,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:background="#000000"
         android:id="@+id/booking_id_layout"
-        android:paddingLeft="10dp">
-
-        <ImageButton
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:src="@drawable/ic_star_normal"
-            android:background="@android:color/transparent"
-            android:scaleType="centerInside"
-            android:layout_gravity="top"
-            android:id="@+id/express_status"
-            android:layout_marginTop="2dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
 
         <LinearLayout
@@ -30,21 +21,27 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1"
+            android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="40dp">
-       <LinearLayout
-           android:layout_width="0dp"
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.8"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+           android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:layout_weight="0.8"
            android:orientation="horizontal">
-
-
        <ImageView
-           android:layout_width="22dp"
-           android:layout_height="22dp"
-           android:src="@drawable/ic_parcel"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:src="@drawable/ic_truck_edit"
            android:background="@android:color/transparent"
-           android:scaleType="centerInside"
+           android:scaleType="centerCrop"
            android:layout_gravity="right|center_vertical"/>
 
         <EditText
@@ -54,26 +51,35 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"
-            android:hint="Enter Booking id"
+            android:hint="Enter Truck ID"
             android:textColorHint="#d6d6d6"
-            android:typeface="sans"
             android:textColor="#d6d6d6"
-            android:id="@+id/new_booking_id" />
+            android:typeface="sans"
+            android:id="@+id/new_truck_id"/>
 
        </LinearLayout>
 
-       <LinearLayout
+
+
+
+
+        </LinearLayout>
+
+            <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
-           android:gravity="center">
+           android:gravity="bottom|center_horizontal"
+                android:layout_marginBottom="15dp">
            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_forward"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
-               android:id="@+id/find_parcel" />
+
+               android:id="@+id/find_truck"
+               />
        </LinearLayout>
 
         </LinearLayout>
@@ -104,11 +110,15 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"/>
 
+
+
             <RelativeLayout
                 android:id="@+id/overlayView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </RelativeLayout>
+
+
 
         </RelativeLayout>
 
