--- a/app/src/main/res/layout/booking_success_dialog.xml
+++ b/app/src/main/res/layout/booking_success_dialog.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/tools"
@@ -37,17 +35,17 @@
                 android:text="Booking Confirmation"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
 
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:background="@android:color/transparent"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_complete"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>   
 
@@ -66,7 +64,8 @@
                     android:layout_marginLeft="25dp"
                     android:layout_marginRight="25dp"
                     android:text="The Parcel with Booking ID No."
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="15sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -77,7 +76,7 @@
                     android:textStyle="bold|italic"
                     android:gravity="center"
                     android:id="@+id/booking_id"
-                    />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -85,7 +84,8 @@
                     android:layout_marginLeft="25dp"
                     android:layout_marginRight="25dp"
                     android:text="has been successfully loaded in Truck no."
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="15sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -96,7 +96,7 @@
                     android:textStyle="bold|italic"
                     android:gravity="center"
                     android:id="@+id/truck_id"
-                    />
+                    android:textSize="15sp"/>
 
                 <Button
                     android:id="@+id/confirm_booking"
@@ -104,7 +104,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:background="@drawable/buttons_bg"
-                    android:text="OK" />
+                    android:text="OK"
+                    android:layout_marginTop="15dp"/>
 
 
             </LinearLayout>
