--- a/app/src/main/res/layout/fragment_loading_sheet.xml
+++ b/app/src/main/res/layout/fragment_loading_sheet.xml
@@ -9,7 +9,7 @@
         android:layout_alignParentTop="true">
 
 
-        <RelativeLayout
+       <!-- <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginBottom="5dp"
@@ -35,10 +35,10 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"/>
 
-        </RelativeLayout>
+        </RelativeLayout>-->
 
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/franchisee_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
 
 
 
-        </LinearLayout>
+        </LinearLayout>-->
 
 
 
