--- a/app/src/main/res/layout/item_to_load_itemwise.xml
+++ b/app/src/main/res/layout/item_to_load_itemwise.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent"
     android:layout_marginBottom="5dp"
     android:orientation="vertical">
@@ -190,7 +191,7 @@
                 android:orientation="vertical"
                 android:weightSum="1">
 
-                <LinearLayout
+                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.33"
@@ -216,6 +217,34 @@
 
 
                 </LinearLayout>
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="0dp"
+                      android:layout_weight="0.66"
+                      android:orientation="horizontal"
+                      android:weightSum="1"
+                      android:gravity="center"
+                      android:paddingLeft="15dp">
+
+                      <TextView
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:layout_weight="0.4"
+                          android:text="Load Wt:"
+                          android:textStyle="bold"
+                          android:textSize="15sp"
+                          android:textColor="@color/black"/>
+                      <EditText
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:layout_weight="0.6"
+                          android:layout_marginRight="10dp"
+                          android:hint="50 kg"
+                          android:textSize="15sp" />
+
+
+                  </LinearLayout>
+
 
 
 
@@ -462,6 +491,11 @@
                 android:background="@android:color/transparent"/>
 
         </LinearLayout>
+
+      <android.support.v7.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          ></android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
 
