--- a/app/src/main/res/layout/load_items_fragment.xml
+++ b/app/src/main/res/layout/load_items_fragment.xml
@@ -10,7 +10,7 @@
     android:id="@+id/new_booking_id">
 
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginBottom="5dp"
@@ -36,10 +36,10 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/franchisee_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,9 +49,9 @@
         android:textColor="@color/maroon"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:typeface="serif" />
+        android:typeface="serif" />-->
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -134,7 +134,7 @@
 
 
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 
 
