--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,8 @@
     <color name="zoom_color">#40FF00</color>
     
     <color name="text_color">#4d2599</color>
+
+    <color name="bg_rounded_square_input_1">#D4F0F4</color>
+    <color name="cat_img_bg">#CFA5A5</color>
+    <color name="bg_rounded_square_holder_1">#CCd6d6d6</color>
 </resources>
