--- a/app/src/main/res/layout/fragment_truck_details_1.xml
+++ b/app/src/main/res/layout/fragment_truck_details_1.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:card_view="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<android.support.v7.widget.CardView
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardElevation="5dp"
-    app:cardCornerRadius="8dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:padding="5dp"
+    android:orientation="vertical"
+    android:elevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +58,7 @@
                 android:paddingLeft="5dp">
 
                 <TextView
-                    android:id="@+id/commodity_name"
+                    android:id="@+id/truck_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="10dp"
@@ -69,7 +68,7 @@
 
 
             </LinearLayout>
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left">
@@ -104,8 +103,8 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="5dp"
                     android:src="@drawable/ic_capacity"
@@ -134,27 +133,29 @@
 
 
             </LinearLayout>
+         -->
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:orientation="horizontal">
 
-                <ImageView
+               <!-- <ImageView
                     android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
                     android:layout_marginRight="5dp"
-                    android:src="@drawable/ic_drop_loc"
-                    />
+                    android:src="@drawable/ic_drop_loc" />-->
+
 
                 <android.support.v7.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:id="@+id/stops_list"
                     android:background="@color/white"
-                    app:layoutManager="android.support.v7.widget.LinearLayout"></android.support.v7.widget.RecyclerView>
+                    ></android.support.v7.widget.RecyclerView>
 
 
 
@@ -194,9 +195,38 @@
     </LinearLayout>
 
 
+    <!--<View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/light_grey"/>-->
 
 
-</android.support.v7.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SHIPMENTS"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        />
+
+
+    <!--<View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/light_grey"/>-->
+
+
+
+
+</LinearLayout>
 
 
 
@@ -207,35 +237,12 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:text="SHIPMENTS"
-               android:gravity="center"
-               android:padding="10dp"
-               android:textSize="18sp"
-               android:textStyle="bold"
-               />
 
-           <View
-               android:layout_width="match_parent"
-               android:layout_height="2dp"
-               android:layout_marginLeft="10dp"
-               android:layout_marginRight="10dp"
-               android:background="@color/light_grey"/>
-           <View
-               android:layout_width="match_parent"
-               android:layout_height="2dp"
-               android:layout_marginTop="5dp"
-               android:layout_marginLeft="10dp"
-               android:layout_marginRight="10dp"
-               android:background="@color/light_grey"/>
 
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
-               android:padding="10dp"
                android:id="@+id/shipmemt_list"></android.support.v7.widget.RecyclerView>
 
        </LinearLayout>
