--- a/app/src/main/res/layout/shipment_list_grid.xml
+++ b/app/src/main/res/layout/shipment_list_grid.xml
@@ -8,7 +8,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:paddingBottom="5dp"
@@ -43,8 +42,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.6"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="5dp"
@@ -53,7 +51,7 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.7"
+                    android:layout_weight="1"
                     android:gravity="left"
                     android:orientation="horizontal">
 
@@ -98,7 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="left"
-                        android:text=" ("
+                        android:text="("
                         android:textSize="16sp"
                         android:typeface="serif" />
 
@@ -124,45 +122,33 @@
                 </LinearLayout>
 
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.3"
-                    android:gravity="right|top"
-                    android:orientation="horizontal">
-
-
-                    <ImageView
-                        android:id="@+id/loading_status"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_incomplete" />
-
-                    <ImageView
-                        android:id="@+id/same_truck_status"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_truck" />
-
-
-                </LinearLayout>
 
             </LinearLayout>
 
+
             <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:weightSum="1">
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="5dp">
+                android:gravity="left"
+                android:layout_gravity="left"
+                android:layout_marginTop="-5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:padding="2dp"
-                    android:text="MISSING ITEMS :"
+                    android:text="MISSING :"
                     android:textSize="12sp"
                     android:typeface="serif" />
 
@@ -171,12 +157,46 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:padding="2dp"
                     android:paddingLeft="10dp"
                     android:text="0"
                     android:textSize="12sp"
                     android:typeface="serif" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:gravity="right|top"
+                android:orientation="horizontal"
+                android:layout_marginTop="-5dp">
+
+                <ImageView
+                    android:id="@+id/damaged_status"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_error" />
+
+                <ImageView
+                    android:id="@+id/same_truck_status"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_truck" />
+                <ImageView
+                    android:id="@+id/loading_status"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_incomplete" />
+
+
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
 
 
         </LinearLayout>
