--- a/app/src/main/res/layout/activity_issue_video.xml
+++ b/app/src/main/res/layout/activity_issue_video.xml
@@ -54,7 +54,7 @@
         android:orientation="vertical"
         android:layout_alignParentTop="true">
 
-        <android.support.design.widget.AppBarLayout
+       <!-- <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary">
@@ -66,7 +66,7 @@
                 android:background="@android:color/transparent" />
         </android.support.design.widget.AppBarLayout>
 
-
+-->
     </LinearLayout>
 
        <RelativeLayout
@@ -101,16 +101,61 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
 
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:background="@drawable/bg_circle_white"
+               android:orientation="horizontal"
+               android:layout_alignParentBottom="true"
+               android:gravity="center"
+               android:layout_centerHorizontal="true"
+               android:weightSum="1"
+               android:layout_marginLeft="20dp"
+               android:layout_marginRight="20dp"
+               android:layout_marginBottom="-50dp">
 
-        <Button
-            android:id="@+id/button_capture_video"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:background="@drawable/button_camera_selector"
-            android:layout_marginBottom="10dp"/>
+
+               <LinearLayout
+                   android:layout_width="0dp"
+                   android:layout_weight="0.5"
+                   android:layout_height="wrap_content"
+                   android:gravity="right"
+                   android:paddingRight="10dp">
+
+               <ImageButton
+                   android:id="@+id/button_capture_issue_pic"
+                   android:layout_width="60dp"
+                   android:layout_height="60dp"
+                   android:layout_margin="2dp"
+                   android:padding="20dp"
+                   android:src="@drawable/ic_photo"
+                   android:scaleType="fitCenter"
+                   android:background="@drawable/button_camera_selector"
+                   android:layout_marginBottom="10dp"/>
+
+               </LinearLayout>
+
+
+           <LinearLayout
+               android:layout_width="0dp"
+               android:layout_weight="0.5"
+               android:layout_height="wrap_content"
+               android:gravity="left"
+               android:paddingLeft="10dp">
+
+               <ImageButton
+                   android:id="@+id/button_capture_issue_video"
+                   android:layout_width="60dp"
+                   android:layout_height="60dp"
+                   android:layout_margin="2dp"
+                   android:src="@drawable/ic_video"
+                   android:scaleType="fitCenter"
+                   android:padding="20dp"
+                   android:background="@drawable/button_camera_selector"
+                   android:layout_marginBottom="10dp" />
+           </LinearLayout>
+
+           </LinearLayout>
     </RelativeLayout>
 
 
