--- a/app/src/main/res/layout/drop_loc_grid.xml
+++ b/app/src/main/res/layout/drop_loc_grid.xml
@@ -9,8 +9,8 @@
         android:id="@+id/stop"
         android:text="HYD"
         android:padding="5dp"
-        android:textColor="@color/black"
-        android:background="@drawable/bg_rounded_square_holder"/>
+        android:textSize="12sp"
+        android:textColor="@color/black" />
 
 
 </LinearLayout>
