--- a/app/src/main/res/layout/fragment_truck_details_1.xml
+++ b/app/src/main/res/layout/fragment_truck_details_1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -195,13 +195,11 @@
     </LinearLayout>
 
 
-    <!--<View
+    <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
-        android:background="@color/light_grey"/>-->
+        android:background="@color/light_grey"/>
 
 
     <TextView
@@ -215,13 +213,18 @@
         />
 
 
-    <!--<View
+    <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/light_grey"/>-->
+        android:background="@color/light_grey"/>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/light_grey"/>
 
 
 
@@ -236,7 +239,9 @@
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:orientation="vertical">
+           android:orientation="vertical"
+           android:paddingLeft="5dp"
+           android:paddingRight="5dp">
 
 
            <android.support.v7.widget.RecyclerView
