--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="maroon">#d72d2d</color>
+    <color name="red">#FF0000</color>
     <color name="light_grey">#d6d6d6</color>
     <color name="result_bg">#434A54</color>
     <color name="zoom_color">#40FF00</color>
