--- a/app/src/main/res/drawable-hdpi/bg_button.xml
+++ b/app/src/main/res/drawable-hdpi/bg_button.xml
@@ -3,12 +3,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@color/white" android:endColor="@color/white"
+    <gradient android:startColor="@color/lightest_grey" android:endColor="@color/white"
         android:angle="225"/>
 
-    <stroke android:width="1dp"
-
-        android:color="@color/black"
+    <stroke android:width="3dp"
+        android:color="@color/light_grey"
         />
 
     <padding android:left="1dp"
@@ -21,5 +20,4 @@
         android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
 
 </shape>
-
 
