--- a/app/src/main/res/drawable/bg_dialog_bottom_rounded.xml
+++ b/app/src/main/res/drawable/bg_dialog_bottom_rounded.xml
@@ -6,10 +6,7 @@
     <gradient android:startColor="@color/white" android:endColor="@color/white"
         android:angle="225"/>
 
-    <stroke android:width="1dp"
 
-        android:color="@color/black"
-        />
 
     <padding android:left="1dp"
         android:top="1dp"
@@ -17,9 +14,7 @@
         android:bottom="1dp"
         />
 
-    <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
-        android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
+    <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp" />
 
 </shape>
-
 
