--- a/app/src/main/res/drawable/bg_rounded_square_holder_green.xml
+++ b/app/src/main/res/drawable/bg_rounded_square_holder_green.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@color/white" android:endColor="@color/white"
-        android:angle="225"/>
+    <solid android:color="#07d207"/>
+
+
 
     <stroke android:width="1dp"
 
@@ -21,5 +23,3 @@
         android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
 
 </shape>
-
-
