--- a/app/src/main/res/drawable/bg_selected_category_holder_camera.xml
+++ b/app/src/main/res/drawable/bg_selected_category_holder_camera.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@color/white" android:endColor="@color/white"
+    <gradient android:startColor="@color/bg_rounded_square_holder_1" android:endColor="@color/white"
         android:angle="225"/>
 
     <stroke android:width="1dp"
@@ -17,9 +17,8 @@
         android:bottom="1dp"
         />
 
-    <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
-        android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
+    <corners android:bottomRightRadius="15dp" android:bottomLeftRadius="15dp"
+        android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
 
 </shape>
-
 
