--- a/app/src/main/res/drawable/bg_selected_category_holder_grey.xml
+++ b/app/src/main/res/drawable/bg_selected_category_holder_grey.xml
@@ -3,8 +3,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient android:startColor="@color/white" android:endColor="@color/white"
+    <gradient android:startColor="@color/bg_rounded_square_holder_1" android:endColor="@color/white"
         android:angle="225"/>
+
+    <stroke android:width="1dp"
+
+        android:color="@color/black"
+        />
 
     <stroke android:width="1dp"
 
@@ -16,10 +21,8 @@
         android:right="1dp"
         android:bottom="1dp"
         />
-
     <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
         android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
 
 </shape>
-
 
