--- a/app/src/main/res/drawable/bg_selected_category_holder_primary_brder.xml
+++ b/app/src/main/res/drawable/bg_selected_category_holder_primary_brder.xml
@@ -7,9 +7,7 @@
         android:angle="225"/>
 
     <stroke android:width="1dp"
-
-        android:color="@color/black"
-        />
+        android:color="@color/colorPrimary" />
 
     <padding android:left="1dp"
         android:top="1dp"
