--- a/app/src/main/res/drawable/bg_top_rounded_square_holder_primary.xml
+++ b/app/src/main/res/drawable/bg_top_rounded_square_holder_primary.xml
@@ -4,17 +4,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/bg_rounded_square_holder_1"/>
+    <solid android:color="@color/colorPrimary"/>
 
 
 
-    <padding android:left="3dp"
+
+    <padding android:left="1dp"
         android:top="1dp"
         android:right="1dp"
         android:bottom="1dp"
         />
 
-    <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
+    <corners
         android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
 
 </shape>
