--- a/app/src/main/res/layout/fragment_truck_details_1.xml
+++ b/app/src/main/res/layout/fragment_truck_details_1.xml
@@ -12,8 +12,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:padding="5dp"
-    android:orientation="vertical"
-    android:elevation="5dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,8 +22,8 @@
         android:weightSum="1">
 
         <LinearLayout
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:background="@color/maroon"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
@@ -32,8 +31,8 @@
 
             <ImageView
                 android:id="@+id/truck_img"
-                android:layout_width="105dp"
-                android:layout_height="105dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:background="@color/white"
                 android:padding="10dp"
                 android:scaleType="centerInside"
@@ -63,8 +62,10 @@
                     android:layout_height="wrap_content"
                     android:paddingRight="10dp"
                     android:text="CJKRLTYF56"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="15sp"
+                    android:typeface="serif"/>
 
 
             </LinearLayout>
@@ -140,51 +141,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:orientation="horizontal">
-
-               <!-- <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="22dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/ic_drop_loc" />-->
-
-
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/stops_list"
-                    android:background="@color/white"
-                    ></android.support.v7.widget.RecyclerView>
-
-
-
-
-
-
-
-
-
-
-
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="1"
-                android:gravity="center">
+                android:layout_marginTop="-5dp"
+                android:paddingLeft="5dp">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="This ID is not correct."
+                    android:typeface="serif"
+                    android:textSize="12sp"/>
 
-
-
-
-
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:typeface="serif"
+                    android:textSize="12sp"
+                    android:text="Change "
+                    android:minHeight="2dip"
+                    android:minWidth="2dip"
+                    android:textColor="#0000ff"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="italic"
+                    android:id="@+id/reenter_truck_id"
+                    android:background="@android:color/transparent"/>
 
             </LinearLayout>
+
 
 
         </LinearLayout>
@@ -194,37 +177,104 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="-2dp"
+        >
+
+       <LinearLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:layout_gravity="right"
+           android:gravity="right">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="See  Truck  Details"
+                android:textStyle="italic"
+                android:textSize="15sp"
+                android:typeface="serif"/>
+
+        </LinearLayout>
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:padding="6dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_drop_arrow_1"
+            android:scaleType="fitCenter"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:id="@+id/see_more_details"/>
+
+       </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:id="@+id/truck_details">
+
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/stops_list"
+            android:background="@color/white"
+            android:layout_gravity="center"
+            />
+
+        </LinearLayout>
+
+
+
+
+
+
+    </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginBottom="5dp"
-        android:background="@color/light_grey"/>
+        android:background="@color/colorPrimary"/>
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SHIPMENTS"
+        android:text="ITEMS TO LOAD"
         android:gravity="center"
         android:padding="10dp"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        />
+        android:textColor="@color/colorPrimary"/>
 
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginTop="5dp"
-        android:background="@color/light_grey"/>
+        android:background="@color/colorPrimary"/>
 
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginTop="2dp"
-        android:background="@color/light_grey"/>
+        android:background="@color/colorPrimary"/>
 
 
 
