--- a/app/src/main/res/layout/item_to_load_itemwise_1.xml
+++ b/app/src/main/res/layout/item_to_load_itemwise_1.xml
@@ -2,33 +2,23 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/transparent"
-    android:layout_marginBottom="5dp"
+    android:background="@color/colorPrimaryLight"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        android:padding="2dp"
-        android:background="@color/white"
-        android:layout_margin="2dp">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical"
-        android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingTop="10dp"
-        android:layout_marginBottom="3dp">
+        android:paddingTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="90dp"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal"
@@ -93,7 +83,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
-            android:layout_margin="5dp">
+            android:layout_margin="2dp">
 
             <TextView
                 android:id="@+id/commodity_name"
@@ -106,6 +96,7 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:typeface="serif"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -124,7 +115,7 @@
                 android:textColor="@color/maroon"
                 android:textSize="18sp"
                 android:typeface="serif"
-                android:id="@+id/total_count"/>
+                android:id="@+id/total_count" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -135,17 +126,37 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:typeface="serif"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="2dp"
+            android:weightSum="1"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:text="Loaded Count :"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:textColor="@color/black"
+                />
 
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="2dp"
                 android:hint="50"
                 android:textSize="18sp"
                 android:text="1000"
-                android:paddingRight="5dp"
-                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
                 android:textColor="@android:color/holo_green_light"
                 android:id="@+id/loading_count"
                 android:gravity="center"/>
@@ -155,7 +166,6 @@
 
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -168,7 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="2dp"
-                android:text="Heavy Items.Heavy ItemsHandle with Care. Heavy Items.Heavy Items.Heavy Items"
+                android:text="Heavy Items.Heavy Items"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="italic"
@@ -177,7 +187,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#d6d6d6"
-                android:layout_margin="2dp"/>
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"/>
+
 
             <ImageButton
                 android:layout_width="14dp"
@@ -371,38 +385,39 @@
 
         </LinearLayout>
 
-
-
-        <LinearLayout
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/light_grey"/>
 
 
 
-        </LinearLayout>
 
 
 
      </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="3dp"
         android:background="@color/white"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        android:weightSum="1">
+        android:orientation="vertical"
+        >
+
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left">
+            android:gravity="left"
+            android:orientation="horizontal"
+            android:padding="15dp">
 
             <ImageView
                 android:layout_width="30dp"
@@ -412,7 +427,7 @@
                 android:src="@drawable/ic_load" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="311dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal"
@@ -425,8 +440,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
                     android:text="Load Weight:"
-                    android:textStyle="bold"
-                    android:textSize="15sp"
+                    android:textSize="18sp"
                     android:textColor="@color/black"/>
                 <EditText
                     android:layout_width="0dp"
@@ -452,21 +466,34 @@
         </LinearLayout>
 
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@color/light_grey"/>
+
 
 
     </LinearLayout>
 
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="3dp"
         android:background="@color/white"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        android:weightSum="1">
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:weightSum="1">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -576,20 +603,32 @@
 
         </LinearLayout>
 
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2.5dp"
+            android:background="@color/light_grey"/>
+
 
     </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="3dp"
-        android:weightSum="1"
-        android:background="@color/white"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="15dp"
+        android:orientation="vertical"
         android:id="@+id/damage_layout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="15dp">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.8"
@@ -619,11 +658,10 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <Lin
             android:layout_width="0dp"
             android:layout_weight="0.2"
-            android:layout_height="wrap_content"
-            android:gravity="right">
+            android:layout_height="wrap_content">
 
 
           <!--  <ImageButton
@@ -636,20 +674,36 @@
                 android:layout_marginRight="5dp"
                 android:id="@+id/take_issue_video"/>
           -->
+
+
+
+
             <Button
-                android:layout_width="25dp"
+                android:layout_width="2dp"
                 android:layout_height="25dp"
                 android:background="@drawable/bg_circle_red"
                 android:text="1"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:id="@+id/go_to_issues"/>
+                android:id="@+id/go_to_issues"
+                />
+
+            </Lin>
+
+
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2.5dp"
+            android:background="@color/light_grey"/>
+
 
             </LinearLayout>
 
 
-            </LinearLayout>
 
 
 
